--- a/driver/build.gradle
+++ b/driver/build.gradle
@@ -26,3 +26,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+apply from: './publish.gradle'
